<resources>
    <string name="app_name">Testing#4</string>
    <string name="splash_screen_1_string">Curated styles with a modern twist on \n classic Indian designs.</string>
    <string name="exclusive_collections">Exclusive Collections</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="forgot_password">Enter your mobile number or email id we’ll send you reset \n password link</string>
    <string name="otp_string">Please enter the code we sent over Email id to</string>
    <string name="choose_category_wise">Choose category wise</string>
    <string name="search_icon">Search Icon</string>
    <string name="search_any_product">Search any Product..</string>
    <string name="miscellanious">Miscellanious</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="orders">Orders</string>
    <string name="electronics">Electronics</string>
    <string name="price">price</string>
    <string name="name">name</string>
    <string name="you">You</string>
    <string name="add_to_bag">Add to Bag</string>
    <string name="favorites">FAVORITES</string>
    <string name="cart">CART</string>
    <string name="_1">1</string>
    <string name="bill_details">Bill Details</string>
    <string name="street_details">Street Details</string>
    <string name="enter_street_details">Enter street details</string>
    <string name="apartment_house_no">Apartment/House no.*</string>
    <string name="address_type">Address type</string>
    <string name="office">office</string>
    <string name="other">other</string>
    <string name="enter_house_no">Enter house no</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="pincode">Pincode *</string>
    <string name="landmark">Landmark</string>
    <string name="enter_a_nearby_landmark">Enter a nearby landmark</string>
    <string name="make_this_address_default">make this address default</string>
    <string name="save_address">Save Address</string>
    <string name="delivery_charges">Delivery charges</string>
    <string name="delete">Delete</string>
    <string name="buy_now">Buy Now</string>
</resources>